# get_baskerball

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/my_pkg1/: circle_strong.py  detect_hoop_2d.py  nearest_piont.py  test3.py  test4.py  test6.py
devel/lib/pkgconfig/: livox_ros_driver2.pc  my_pkg1.pc
devel/lib/python3/dist-packages/my_pkg1/: __init__.py
devel/share/livox_ros_driver2/cmake/: livox_ros_driver2-msg-extras.cmake  livox_ros_driver2-msg-paths.cmake  livox_ros_driver2Config.cmake
devel/share/my_pkg1/cmake/: my_pkg1Config.cmake
devel/share/roseus/ros/livox_ros_driver2/: manifest.l
src/my_pkg1/: CMakeLists.txt  setup.py
src/my_pkg1/launch/: find_object_ini.launch  my_pkg1_node.launch  my_pkg1_rviz.launch  test7.launch  work_all.launch
src/my_pkg1/rviz/: recongnize.rviz  result.rviz
src/my_pkg1/scripts/: basket_detector_node.py  cam_test1.py  nearest_piont.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
